<resources>
    <string name="app_name">Ithinking</string>
    <string name="cidian">Java Web  编程词典（个人版）主干目录
入门训练营\n
  第1部分   从零开始\n
      第1课   第 1 课  搭建开发环境\n
          第1讲   课堂讲解\n
          第2讲   照猫画虎——基本功训练\n
          第3讲   情景应用——拓展与实践\n
      第2课   第 2 课  JSP中的Java程序\n
          第4讲   课堂讲解\n
          第5讲   照猫画虎——基本功训练\n
          第6讲   情景应用——拓展与实践\n
      第3课   第 3 课  HTML语言与CSS样式\n
          第7讲   课堂讲解\n
          第8讲   照猫画虎——基本功训练\n
          第9讲   情景应用——拓展与实践\n
      第4课   第 4 课  JavaScript脚本语言\n
          第10讲   课堂讲解\n
          第11讲   照猫画虎——基本功训练\n
          第12讲   情景应用——拓展与实践\n
      第5课   第 5 课  掌握JSP语法\n
          第13讲   课堂讲解\n
          第14讲   照猫画虎——基本功训练\n
          第15讲   情景应用——拓展与实践\n
      第6课   第 6 课  使用JSP内置对象\n
          第16讲   课堂讲解\n
          第17讲   照猫画虎——基本功训练\n
          第18讲   情景应用——拓展与实践\n</string>
    <string name="textView1">微信</string>
    <string name="textView2">通讯录</string>
    <string name="textView3">QQ</string>
    <string name="textView4">相机</string>
    <string name="textView5">时钟</string>
    <string name="textView6">备忘录</string>
    <string name="textView7">音乐</string>
    <string name="textView8">互联网</string>
    <string name="textView9">邮件</string>
    <string name="wenxin_login">登录</string>
    <string name="todaynew_title">新闻标题</string>
    <string name="menu_title">设置</string>
    <string name="menu_regard">关于</string>
    <string name="actionbar_search">搜索</string>
    <string name="username_hint">用户名</string>
    <string name="password_hint">密码</string>
    <string name="search_et_hint">请输入</string>
</resources>
