<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_search_et"
        android:title="@string/actionbar_search"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView"></item>

    <item android:id="@+id/actionbar_tongxuelu"
        android:title="通讯录"
        app:actionLayout="@layout/img_message"
        app:showAsAction="always"></item>
    <item android:id="@+id/actionbar_add"
        android:title="添加"
        app:actionLayout="@layout/img_add"
        app:showAsAction="always"></item>
    <item android:id="@+id/actionbar_search"
    android:icon="@drawable/actionbar_search"
    android:title="search"
    app:showAsAction="ifRoom"></item>
    <item android:id="@+id/actionbar_"
        android:icon="@drawable/actionbar_bell"
        android:title="bell"
        app:showAsAction="ifRoom"></item>
    <item android:id="@+id/actionbar_settings"
        android:title="@string/menu_title"
        app:showAsAction="ifRoom"></item>
    <item android:id="@+id/actionbar_regard"
        android:title="@string/menu_regard"
        app:showAsAction="never"></item>

</menu>